--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.3",
+    "mongoose": "^6.5.5",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node.js": "^0.0.1-security",
+    "password-validator": "^5.3.0",
     "save": "^2.5.0"
   }
 }
