--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "node.js": "^0.0.1-security",
     "password-validator": "^5.3.0",
-    "save": "^2.5.0"
+    "path": "^0.12.7",
+    "save": "^2.5.0",
+    "uuid": "^9.0.0"
   }
 }
